Little fixes for windows